--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@ permalink: /
         });
     </script>
     {%- endif %}
+    <style>
+        body {
+            background-image: url("images/wudouye.jpg");
+            background-size: cover;
+        }
+    </style>
 </head>
 <body class="fullscreen-background">
 
