--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@ permalink: /
     <div class="col text-center">Built on the <a href="https://github.com/tsjensen/fuse-core">Fuse Core</a>
     Jekyll theme.</div>
 </div></div></footer>
-
+<a href="https://www.touchgal.me">Touchgal</a>
 </body>
 </html>
