--- a/index.html
+++ b/index.html
@@ -110,5 +110,10 @@ permalink: /
     Jekyll theme.</div>
 </div></div></footer>
 <a href="https://www.touchgal.me">Touchgal</a>
+<a href="https://lspgal.top">Lspgal</a>
+<a href="https://www.bilibili.com">哔哩哔哩</a>
+<a href="https://ezdmw.site">E站弹幕</a>
+<a href="https://jm365.work/3YeBdF">Jmcomic</a>
+<a href="https://ecchi.iwara.tv">Iwara</a>
 </body>
 </html>
