--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@ permalink: /
 <a href="https://ezdmw.site">E站弹幕</a>
 <a href="https://jm365.work/3YeBdF">Jmcomic</a>
 <a href="https://ecchi.iwara.tv">Iwara</a>
+<a href="Touhou.pdf" download>东方求闻史纪</a>
 </body>
 </html>
