--- a/index.html
+++ b/index.html
@@ -116,5 +116,6 @@ permalink: /
 <a href="https://jm365.work/3YeBdF">Jmcomic</a>
 <a href="https://ecchi.iwara.tv">Iwara</a>
 <a href="Touhou.pdf" download>东方求闻史纪</a>
+<a href="Plane.html" target="top">炸飞机游戏</a>
 </body>
 </html>
