--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ permalink: /
 </div>
 
 <footer><div class="container"><div class="row">
-    <div class="col text-center">Built on the <a href="https://github.com/tsjensen/fuse-core">Fuse Core</a>
-    Jekyll theme.</div>
+    <div class="col text-center">Built by <a href="https://space.bilibili.com/646516442?spm_id_from=333.337.0.0">zh&zh</a>
+    @@.</div>
 </div></div></footer>
 <a href="https://www.touchgal.me">Touchgal</a>
 <a href="https://lspgal.top">Lspgal</a>
