--- a/index.html
+++ b/index.html
@@ -117,5 +117,6 @@ permalink: /
 <a href="https://ecchi.iwara.tv">Iwara</a>
 <a href="Touhou.pdf" download>东方求闻史纪</a>
 <a href="Plane.html" target="top">炸飞机游戏</a>
+<a href="pianodemo.html" target="top">钢琴初版</a>
 </body>
 </html>
