--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ permalink: /
     </style>
 </head>
 <body class="fullscreen-background">
-
+<audio src="images/satori.mp3" loop="loop"></audio> 
 <div class="glass-pane">
 <div class="container fuse-core-content pb-4">
 
