--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ permalink: /
     </style>
 </head>
 <body class="fullscreen-background">
-<audio src="satori.mp3" loop="loop"></audio> 
+
+<audio src="satori.mp3" loop="true" autoplay="autoplay"></audio> 
 <div class="glass-pane">
 <div class="container fuse-core-content pb-4">
 
