--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ permalink: /
 </head>
 <body class="fullscreen-background">
 
-<audio src="satori.mp3" loop="true" autoplay="autoplay"></audio> 
+<audio src="satori.mp3" loop="true" autoplay="true"></audio> 
 <div class="glass-pane">
 <div class="container fuse-core-content pb-4">
 
