--- a/Plane.html
+++ b/Plane.html
@@ -277,6 +277,35 @@
       }
       init()
     </script>
+    <table border="1" align="center">
+      <tr width="6" height="6">
+        <td>row 1,cell 1</td>
+        <td>row 1,cell 2</td>
+        <td bgcolor="red">row 1,cell 3</td>
+        <td>row 1,cell 4</td>
+        <td>row 1,cell 5</td>
+      </tr>
+      <tr width="6" height="6">
+        <td bgcolor="green">row 2,cell 1</td>
+        <td bgcolor="green">row 2,cell 2</td>
+        <td bgcolor="green">row 2,cell 3</td>
+        <td bgcolor="green">row 2,cell 4</td>
+        <td bgcolor="green">row 2,cell 5</td>
+      </tr>
+      <tr width="6" height="6">
+        <td>row 3,cell 1</td>
+        <td>row 3,cell 2</td>
+        <td bgcolor="green">row 3,cell 3</td>
+        <td>row 3,cell 4</td>
+        <td>row 3,cell 5</td>
+      </tr>
+      <tr width="6" height="6">
+        <td>row 4,cell 1</td>
+        <td bgcolor="green">row 4,cell 2</td>
+        <td bgcolor="green">row 4,cell 3</td>
+        <td bgcolor="green">row 4,cell 4</td>
+        <td>row 4,cell 5</td>
+      </tr>
   </body>
 </html>
 
