--- a/Plane.html
+++ b/Plane.html
@@ -279,32 +279,32 @@
     </script>
     <table border="1" align="center">
       <tr width="6" height="6">
-        <td></td>
-        <td></td>
-        <td bgcolor="red"></td>
-        <td></td>
-        <td></td>
+        <td>Z</td>
+        <td>Z</td>
+        <td bgcolor="red">Z</td>
+        <td>Z</td>
+        <td>Z</td>
       </tr>
       <tr width="6" height="6">
-        <td bgcolor="green"></td>
-        <td bgcolor="green"></td>
-        <td bgcolor="green"></td>
-        <td bgcolor="green"></td>
-        <td bgcolor="green"></td>
+        <td bgcolor="green">Z</td>
+        <td bgcolor="green">Z</td>
+        <td bgcolor="green">Z</td>
+        <td bgcolor="green">Z</td>
+        <td bgcolor="green">Z</td>
       </tr>
       <tr width="6" height="6">
-        <td></td>
-        <td></td>
-        <td bgcolor="green"></td>
-        <td></td>
-        <td></td>
+        <td>Z</td>
+        <td>Z</td>
+        <td bgcolor="green">Z</td>
+        <td>Z</td>
+        <td>Z</td>
       </tr>
       <tr width="6" height="6">
-        <td>row 4,cell 1</td>
-        <td bgcolor="green"></td>
-        <td bgcolor="green"></td>
-        <td bgcolor="green"></td>
-        <td></td>
+        <td>Z</td>
+        <td bgcolor="green">Z</td>
+        <td bgcolor="green">Z</td>
+        <td bgcolor="green">Z</td>
+        <td>Z</td>
       </tr>
   </body>
 </html>
