--- a/Plane.html
+++ b/Plane.html
@@ -277,34 +277,35 @@
       }
       init()
     </script>
-    <table border="1" align="center">
-      <tr width="6" height="6">
-        <td>Z</td>
-        <td>Z</td>
+    <table border="0" align="center">
+      <caption>菜就多练</caption>
+      <tr width="10" height="10">
+        <td bgcolor="blue">Z</td>
+        <td bgcolor="blue">Z</td>
         <td bgcolor="red">Z</td>
-        <td>Z</td>
-        <td>Z</td>
+        <td bgcolor="blue">Z</td>
+        <td bgcolor="blue">Z</td>
       </tr>
-      <tr width="6" height="6">
+      <tr width="10" height="10">
         <td bgcolor="green">Z</td>
         <td bgcolor="green">Z</td>
         <td bgcolor="green">Z</td>
         <td bgcolor="green">Z</td>
         <td bgcolor="green">Z</td>
       </tr>
-      <tr width="6" height="6">
-        <td>Z</td>
-        <td>Z</td>
+      <tr width="10" height="10">
+        <td bgcolor="blue">Z</td>
+        <td bgcolor="blue">Z</td>
         <td bgcolor="green">Z</td>
-        <td>Z</td>
-        <td>Z</td>
+        <td bgcolor="blue">Z</td>
+        <td bgcolor="blue">Z</td>
       </tr>
-      <tr width="6" height="6">
-        <td>Z</td>
+      <tr width="10" height="10">
+        <td bgcolor="blue">Z</td>
         <td bgcolor="green">Z</td>
         <td bgcolor="green">Z</td>
         <td bgcolor="green">Z</td>
-        <td>Z</td>
+        <td bgcolor="blue">Z</td>
       </tr>
   </body>
 </html>
