--- a/index.html
+++ b/index.html
@@ -108,16 +108,22 @@ permalink: /
 
 <footer><div class="container"><div class="row">
     <div class="col text-center">Built by <a href="https://space.bilibili.com/646516442?spm_id_from=333.337.0.0">zh&zh</a>
-    @@.</div>
+    BiliBili.</div>
 </div></div></footer>
 <a href="https://www.touchgal.me">Touchgal</a>
+<br/>
 <a href="https://lspgal.top">Lspgal</a>
+<br/>
 <a href="https://www.bilibili.com">哔哩哔哩</a>
+<br/>
 <a href="https://ezdmw.site">E站弹幕</a>
+<br/>
 <a href="https://jm365.work/3YeBdF">Jmcomic</a>
+<br/>
 <a href="https://ecchi.iwara.tv">Iwara</a>
-<a href="Touhou.pdf" download>东方求闻史纪</a>
+<br/>
 <a href="Plane.html" target="top">炸飞机游戏</a>
+<br/>
 <a href="pianodemo.html" target="top">钢琴初版</a>
 </body>
 </html>
